--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 
-  <link rel="shortcut icon" href="./favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png?">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/images/favicon.ico?v=2">
   <title>Yulin Chen</title>
   </head>
   <body>
